--- a/portfolio.html
+++ b/portfolio.html
@@ -168,7 +168,7 @@
                       <img src="./img/5.jpg" alt="전체 사진" /> 
                     </div>
                     <p>
-                      안드로이드 스튜디오에서 JAVA와 SQLite를 활용하여 만든 일단어 공부 앱입니다.<br />
+                      안드로이드 스튜디오에서 JAVA와 SQLite를 활용하여 만든 일단어 학습 앱입니다.<br />
                       JLPT 시험을 위한 단어 학습 목적으로 만들었으며, 총 7000여개의 단어, 발음, 의미를 db에 저장한 뒤, 급수별로 테이블을 만들었습니다.<br />
                       앱에서는 급수별로 단어를 외웠는지 아닌지를 체크하여 아는 단어나 모르는 단어를 선택해 학습할 수 있고, 단어의 발음이나 의미를 학습하는 기능도 있습니다.<br />
                       현재 PlayStore에 'JLPT 단어 한 입' 이라는 앱으로 출시되어 있습니다.
